--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon"
-        href="/favicon.ico">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+    <meta charset="UTF-8">
+    <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="/favicon/favicon.ico"
+          rel="icon">
+    <link href="/favicon/site.webmanifest" rel="manifest">
+    <meta content="width=device-width, initial-scale=1.0"
+          name="viewport">
+    <title>Vite App</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module"
-          src="/src/main.ts"></script>
+<div id="app"></div>
+<script src="/src/main.ts"
+        type="module"></script>
 </body>
 
 </html>
